# Twittorials

./: Analyze_website_crawls.ipynb  Analyzing_GSC_Data.ipynb  Automated_page_content_classification.ipynb  Breadcrumb_Visualization.ipynb  CTR_curve.ipynb  Content_gap_at_scale.ipynb  Finding URL Parameters through Log Analysis  Finding_Problematic_URL_Parameters_through_Log_Analysis.ipynb  Finding_URL_Parameters_through_Log_Analysis.ipynb  Generate Client reports from a Word template using Python  Generate_SEO_docx_final.ipynb  Generate_SEO_reports.ipynb  Hreflang_Audit.ipynb  Internal linking visualization  Meta_Description_Append.ipynb  Mobile_vs_Desktop_First_Indexing_through_Log_Analysis.ipynb  Predict_clicks_using_Search_Console_data.ipynb  README.md  RSTwittorial_Take_control_of_your_SERP_snippets_with_the_GSC_&_CSE_API.ipynb  Redirect_Chain_ShortCircuit.ipynb  SEO_Visibility_Dashboard.ipynb  Site Migration QA Automation.ipynb  Site_Migration_QA_Automation.ipynb  Sitemap_Canonical_Information.ipynb  Using_Google_Vision_API.ipynb  Website Categorization Updated - Google Colab.ipynb  Website_Categorization_Google_Colab.ipynb  XML_Sitemap_Audit.ipynb  cannibalization.ipynb  html.txt  interestingFindsMobileSerpFeatureAnalysis.ipynb  main.py  pyproject.toml  renderhtml.txt  robots_txt_Sitemap_Testing.ipynb
Content_Check/: README.md  main.py
Diff_Checker_SQL_Nodejs/: db.js  index.js  package.json  readme.md  sqlTables.js
HTML_Diff_Script/: HTML_DIFF.py  HTML_Diff  README.md  README.txt
Requests_Selenium_jcchouinard_com/: .gitignore  1-simple_request.py  3-headless.py  (+9 more)
(+18 files in other folders)
